# simcoe-project

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  README.md  game.h  imgui.ini  install.py  meson.build  meson_options.txt  output.txt  setup.bat  setup.ps1  setup.py  setup.sh  vic20.h
common/core/: meson.build
common/core/data/: simcoe_api.h.in  simcoe_api.hpp.in
common/core/include/core/: arena.hpp  macros.h  macros.hpp  panic.hpp
common/core/src/: arena.cpp  panic.cpp
common/rhi/: meson.build
common/service/: meson.build
common/service/include/service/: service.hpp
common/system/: meson.build
src/client/: meson.build
src/client/data/: vic20.xml
src/client/src/: charmap.h  delayload.cpp  main.cpp  stdafx.hpp
src/common/archive/: meson.build
src/common/archive/data/: archive.ct  archive.xml  format.ct  io.ct  record.ct
src/common/archive/include/archive/: archive.hpp  bundle.hpp  connection.hpp  fs.hpp  (+4 more)
src/common/archive/src/: archive.cpp  bundle.cpp  connection.cpp  fs.cpp  image.cpp  io.cpp  record.cpp  stdafx.hpp
src/common/audio/: meson.build
src/common/bundle/: meson.build
src/common/bundle-old/: meson.build
src/common/bundle/data/: bundle.ct
src/common/bundle/src/: bundle.cpp  font.cpp  image.cpp
src/common/config/: meson.build
src/common/config/data/: config.xml
src/common/config/src/: command_line.cpp  common.hpp  config.cpp  cvar.cpp  legacy_config.cpp  options.cpp  stdafx.hpp
src/common/config/test/: command_line.cpp  config.cpp  cvar.cpp  options.cpp  test_common.hpp
src/common/core/: meson.build
src/common/core/data/: core.ct  simcoe_api.hpp.in
src/common/core/src/: arena.cpp  backtrace.cpp  bitmap.cpp  core.cpp  cpuid.cpp  error.cpp  library.cpp  memory.c  memory.cpp  random.cpp  small_string.cpp  stdafx.hpp  string.cpp  text.cpp  timer.cpp  typeindex.cpp  units.cpp  utf8.cpp  uuid.cpp
src/common/core/test/: combine.cpp  common.cpp  common.hpp  digit.cpp  gtest_common.hpp  string.cpp  symbols.cpp  sync.cpp  units.cpp  uuid.cpp
src/common/db/: meson.build
src/common/db/test/: db_test_common.cpp  db_test_common.hpp  orm_test_common.hpp
src/common/docker/: meson.build
src/common/docker/src/: databases.cpp  docker.cpp
src/common/draw/: meson.build
src/common/draw/benchmark/: meson.build  soak.cpp
src/common/draw/data/: opaque.hlsl  vic20.hlsl
src/common/draw/src/: blit.cpp  camera.cpp  opaque.cpp  scene.cpp  stdafx.hpp
src/common/draw/test/: context.cpp  draw_test_common.cpp  draw_test_common.hpp  meson.build
src/common/draw/tools/: imgui_context.cpp  meson.build
src/common/game/: meson.build
src/common/game/src/: camera.cpp  entity.cpp  game.cpp  object.cpp  stdafx.hpp
src/common/graph/: meson.build
src/common/graph/src/: builder.cpp  context.cpp  graph.cpp
src/common/graph/test/: create.cpp
src/common/i18n/: meson.build
src/common/i18n/data/: i18n.ct
src/common/input/: meson.build
src/common/input/data/: input.ct
src/common/input/src/: input.cpp  toggle.cpp  utils.cpp
src/common/launch/: meson.build
src/common/launch/src/: appwindow.cpp  guiwindow.cpp  launch.cpp
src/common/logs/: meson.build
src/common/logs/appenders/: meson.build
src/common/logs/base/: meson.build
src/common/logs/data/: logs.ct
src/common/logs/logger/: meson.build
src/common/logs/logs/: meson.build
src/common/logs/sinks/: meson.build
src/common/logs/src/: common.hpp  console.cpp  debug.cpp  file.cpp  logs.cpp  panic.cpp  stdafx.hpp
src/common/logs/structured/: meson.build
src/common/net/: meson.build
src/common/net/src/: address.cpp  common.hpp  error.cpp  net.cpp  socket.cpp  stdafx.hpp
src/common/net/test/: client_server.cpp  net.cpp  net_test_common.cpp  net_test_common.hpp  timeout_connect.cpp  timeout_recv.cpp
src/editor/: meson.build
src/editor/data/: ed.ct
src/editor/editor/: meson.build
src/editor/editor/src/: context.cpp  editor.cpp  gltf.cpp  image.cpp  mygui.cpp  stdafx.hpp
src/editor/include/editor/: assets.hpp  config.hpp  debug.hpp  draw.hpp  editor.hpp  features.hpp  graph.hpp  inspector.hpp  logger.hpp  panel.hpp  pix.hpp  scene.hpp  viewport.hpp
src/editor/project/: meson.build
src/editor/project/src/: cube.cpp  stdafx.hpp
src/editor/src/: context.cpp  editor.cpp  editor.xml  main.cpp  stdafx.hpp
src/editor/src/panels/: assets.cpp  config.cpp  debug.cpp  editor.cpp  features.cpp  graph.cpp  inspector.cpp  logger.cpp  mygui.cpp  panel.cpp  pix.cpp  scene.cpp  viewport.cpp
src/meta/: meson.build
src/meta/dao/: main.cpp  meson.build
src/meta/dao/include/: stdafx.hpp  writer.hpp
src/meta/include/meta/: annotate.hpp  class.hpp  empty.hpp  example.hpp  field.hpp  info.hpp  meta.hpp  tags.hpp  utils.hpp
src/meta/object/src/: runtime.cpp
src/meta/src/: info.cpp  main.cpp  stdafx.hpp  utils.cpp
src/meta/tests/: example.cpp  example.hpp  meson.build
src/meta/tool/: meson.build
src/meta/tool/data/: meta_wrap.py
src/meta/tool/include/: writer.hpp
src/meta/tool/src/: main.cpp  stdafx.hpp
src/server/: meson.build
src/server/data/: .env  create-volume.sh  docker-compose-addition.yml  docker-compose.yml  docker-shared.yml  racnoded1.env  racnoded2.env  scripts.sh  server.xml  setup-blkdev.sh  setup-dns.sh  setup-node1.sh  setup-storage.sh  setup.sh
src/server/data/racnode/: AddNode.sh  chronyd.conf  configGrid.sh  dbca_19c.rsp  erasesem.sh  init.sh  nogetty.sh  reloadInstance.sh  remoteListener.sh  runOracle.sh  setup.sh
src/server/docs/: guess.md  hosts.txt  netstat.txt  nslookup.txt  racnoded1.txt  racnoded2.txt  rzone.txt  zone.txt
src/server/docs/inspect/: racnoded1.json  racnoded2.json
src/server/docs/packets/: packet1.txt  packet2.txt  packet3.txt
src/server/src/: client.cpp  common.cpp  common.hpp  main.cpp  server.cpp  stdafx.hpp
subprojects/db2-client/: meson.build  meson_options.txt
subprojects/oracledb-client/: meson.build
subprojects/oradb-oci/: meson.build  meson_options.txt
subprojects/stb/: meson.build
subprojects/stb/include/stb/: stb_image.h
subprojects/stb/src/: stb_rectpack.c
(+1231 files in other folders)
