option('trace_time', type : 'boolean',
    description : 'Trace compile time',
    value : false
)

option('client_win_subsystem', type : 'combo',
    description : 'Subsystem to link as for client applications',
    choices : [ 'console', 'windows' ],
    value : 'console'
)

option('editor_win_subsystem', type : 'combo',
    description : 'Subsystem to link as for editor applications',
    choices : [ 'console', 'windows' ],
    value : 'console'
)

###
### debug features
###

option('freetype_logging', type : 'boolean',
    description : 'Enable freetype logging',
    value : false
)

###
### structured logging features
###

option('logs_include_source_info', type : 'feature',
    description : 'Include source info in the built logdb',
    value : 'auto'
)

###
### render debug features
###

option('pix_enable', type : 'feature',
    description : 'Enable PIX event runtime',
    value : 'auto'
)

option('warp_enable', type : 'feature',
    description : 'Enable searching for the new warp runtime redist',
    value : 'auto'
)

option('framegraph_trace', type : 'feature',
    description : 'Enable framegraph debug tracing',
    value : 'disabled'
)

###
### extra render features
###

option('nvapi_enable', type : 'boolean',
    description : 'Enable NVAPI support',
    value : true
)

option('amd_ags_enable', type : 'boolean',
    description : 'Enable AMD AGS support',
    value : true
)

option('tracy_enable', type : 'boolean',
    value : false
)

###
### extra db features
###

option('orcl', type : 'feature',
    description : 'Enable OracleDB support',
    value : 'auto'
)

option('psql', type : 'feature',
    description : 'Enable PostgreSQL support (partial)',
    value : 'auto'
)

option('mysql', type : 'feature',
    description : 'Enable MySQL support (placeholder)',
    value : 'auto'
)

option('mssql', type : 'feature',
    description : 'Enable Microsoft SQL Server support (placeholder)',
    value : 'auto'
)

option('db2', type : 'feature',
    description : 'Enable IBM DB2 support (placeholder)',
    value : 'auto'
)

option('odbc', type : 'feature',
    description : 'Enable generic ODBC support (placeholder)',
    value : 'auto'
)
